# Understand-Anything-on-aws-poc

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agentcore/: .bedrock_agentcore.yaml  CLAUDE.md  Dockerfile  main.py  main_client.py  main_query_backup.py  pyproject.toml  requirements.txt
agentcore/agents/: architecture-analyzer.md  dependency-analyzer.md  documentation-analyzer.md  file-analyzer.md  graph-reviewer.md  project-scanner.md  security-analyzer.md  test-analyzer.md  tour-builder.md
agentcore/clients/: neptune_client.py
agentcore/skills/understand/: SKILL.md  merge-batch-graphs.py
agentcore/tools/: __init__.py  clone_repository.py  neptune_http.py  neptune_mcp_server.py  neptune_writer.py  query_neptune.py  s3_manager.py
dashboard/: .env.example  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: graph.ts
dashboard/src/components/: ChatPanel.tsx  LoginPage.tsx  ProjectSelector.tsx
dashboard/src/hooks/: useAuth.ts
docs/: ARCHITECTURE.md  coding-cicd-with-knowledge-graph.md  coding-cicd-workflow.md
infra/: app.py  requirements.txt
infra/stacks/: agentcore_stack.py  cognito_stack.py  frontend_stack.py  neptune_stack.py  s3_stack.py  vpc_stack.py
tests/: test_migration.py
