[project]
name = "understand-anything-agent"
version = "0.1.0"
description = "AgentCore runtime for Understand-Anything code analysis"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.2.103",
    "bedrock-agentcore>=1.14.1",
    "gremlinpython>=3.7.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0.1",
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
